--- a/website/subgal.css
+++ b/website/subgal.css
@@ -3,6 +3,10 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+:root {
+	--text-blue: rgb(10, 93, 153);
+}
 .box {
 	border: 1px solid red;
 }
@@ -35,6 +39,48 @@
 		margin-top: 0;
 		left: -70%;
 	}
+}
+.popbox {
+	position: absolute;
+	top: 50px;
+	right: 50px;
+	width: 200px;
+	background: var(--text-blue);
+	padding: 5px 10px;
+	border-radius: 10px;
+	visibility: hidden;
+	opacity: 0;
+	transform: translateX(50px) translateY(50px);
+	transition: 0.2s ease-in;
+	transition-delay: 0.2s;
+	/* border: 1px solid black; */
+	z-index: 2000;
+}
+.popbox::before {
+	content: '';
+	position: absolute;
+	z-index: 2000;
+	top: 0;
+	right: 10px;
+	height: 30px;
+	width: 30px;
+	background: var(--text-blue);
+	transform: rotate(45deg);
+}
+.topbox:hover .popbox {
+	visibility: visible;
+	opacity: 1;
+	transform: translateX(50px) translateY(0px);
+}
+
+.list img {
+	width: 100vw;
+	height: 100%;
+	object-fit: cover;
+}
+.dots li.active {
+	width: 30px;
+	background-color: white;
 }
 /* footer */
 .footer {
